# berghain_challenge

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
scripts/: bench.py  play.py  resume.py
src/berghain/: __init__.py  attr_ewma_policy.py  client.py  ewma_policy.py  logging_utils.py  policy.py  runner.py  types.py  utils.py  window_policy.py
src/berghain_challenge_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_policies.py  test_reconstruct.py
